# ROS_

./: README.md  talker.md
devel/: .catkin  .rosinstall  _setup_util.py
devel/include/opencv_cam/: clu.h  cluRequest.h  cluResponse.h
devel/lib/lidar_rviz/: parser
devel/lib/opencv_cam/: RANSAC  cam_data_msgs  client  k_means
devel/lib/opencv_pc/: opencv_sub
devel/lib/pkgconfig/: lidar_rviz.pc  opencv_cam.pc  opencv_pc.pc  ydlidar_ros_driver.pc
devel/lib/python3/dist-packages/opencv_cam/srv/: __init__.py  _clu.py
devel/lib/ydlidar_ros_driver/: ydlidar_ros_driver_node
devel/share/common-lisp/ros/opencv_cam/srv/: _package.lisp  _package_clu.lisp  clu.lisp  (+1 more)
devel/share/lidar_rviz/cmake/: lidar_rvizConfig.cmake
devel/share/opencv_cam/cmake/: opencv_cam-msg-extras.cmake  opencv_cam-msg-paths.cmake  opencv_camConfig.cmake
devel/share/opencv_pc/cmake/: opencv_pcConfig.cmake
devel/share/roseus/ros/opencv_cam/: manifest.l
devel/share/ydlidar_ros_driver/cmake/: ydlidar_ros_driverConfig.cmake
src/lidar_rviz/: CMakeLists.txt  package.xml
src/lidar_rviz/launch/: display.launch
src/lidar_rviz/rviz/: urdf.rviz
src/lidar_rviz/src/: parser.cpp  test.cpp  tf_sp.cpp
src/lidar_rviz/urdf/: myfirst.urdf
src/opencv_cam/: CMakeLists.txt  package.xml
src/opencv_cam/src/: RANSAC.cpp  cam_pub.cpp  client.cpp  k-means.cpp  test.cpp  test2.cpp
src/opencv_cam/srv/: clu.srv
src/opencv_pc/: CMakeLists.txt  package.xml
src/opencv_pc/src/: cam_sub.cpp  camaa.cpp
study/: Publisher Test.ipynb  ROS_.md  Ros와 같은 것이 필요한 이유.ipynb  Subscription Test.ipynb
(+3 files in other folders)
